# investmanager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.multiprocess  Dockerfile.simple  Dockerfile.standalone  LICENSE  Makefile  README.md  docker-compose.multiprocess.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py
api/routes/: __init__.py  analysis.py  backtest.py  feishu.py  market.py  report.py  tasks.py
api/schemas/: __init__.py  requests.py  responses.py
config/: __init__.py  email.yaml  feishu.yaml  logging_config.py  settings.py
db/: init.sql
docs/: ARCHITECTURE_EVOLUTION.md  CHAT_PERSONALIZATION_DESIGN.md  COMPREHENSIVE_COMMAND_DESIGN.md  DEPLOYMENT_GUIDE.html  DESIGN_DOCUMENT.html  PACKAGING_AND_RUNNING_GUIDE.md
scripts/: build.sh  deploy.sh  dev.sh  email_oauth2_setup.py  healthcheck.sh  package.sh  quick-start.sh  run-image.sh  run.sh  setup.sh  start-multiprocess.sh
services/: __init__.py  capability_protocol.py  registration.py  service_registry.py
services/agent/: __init__.py  main.py  service.py
services/capabilities/: __init__.py  main.py
services/chat/: __init__.py  main.py
services/dev/: __init__.py  main.py
services/gateway/: __init__.py  help_system.py  intent_router.py  main.py  registry.py
services/invest/: __init__.py  (+1 more)
tests/: __init__.py  test_cache.py  test_e2e_comprehensive.py  test_e2e_registration.py  test_feishu.py  test_feishu_integration.py  test_integration_tracing.py  test_oauth2.py  test_sqlite.py  test_task_api.py  test_web_search.py
web/: __init__.py  app.py
(+130 files in other folders)
